syntax = "proto3";
package server_proto;

message GreetingReq {
  string msg = 1;
}

message NilRsp {
}

service EdgeDaemonService {
  rpc Greeting(GreetingReq) returns (NilRsp);
}
